Fix line-height and text-align in side nav
Closes #40

--- a/static/css/default.css
+++ b/static/css/default.css
@@ -502,3 +502,7 @@ span#languagesSeparator {
     border-bottom: none !important;
 }
 
+.side-nav a {
+    line-height: 1.3;
+    text-align: left;
+}
